[tool.poetry]
name = "repl_python3_Bliss-12-CMS"
version = "0.1.0"
description = ""
authors = ["BlissBizoza <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
image = "^1.5.33"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
